--- a/Lect13_Convergence.ipynb
+++ b/Lect13_Convergence.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Note the non-constant coefficient in front of $dW_t$ so that we can see differences between the three schemes. \n",
     "\n",
-    "This is a Geometric Brownian motion (GBM), which arises in financial mathematics (the probability density of this SDE satisfies the Black-Scholes PDE). Its exact solution is (non-examinable)\n",
+    "This is a Geometric Brownian motion (GBM), which arises in financial mathematics (the probability density of this SDE satisfies the Black-Scholes PDE). Its exact solution is\n",
     "$$\n",
     "X_t = x_0 \\exp\\left[(\\mu - \\sigma^2/2)t + \\sigma W_t \\right].\n",
     "$$\n",
@@ -396,7 +396,7 @@
     "\n",
     "μ = 2; σ = 1; x0 = 1;           # problem parameters\n",
     "T = 1;\n",
-    "M = 10^6;                       # number of trajectories used to compute the average\n",
+    "M = 10^3;                       # number of trajectories used to compute the average (increase to reduce sampling error)\n",
     "pin = (1:5);\n",
     "Xem = zeros(length(pin)); Xmil = zeros(length(pin)); # preallocate arrays for errors\n",
     "\n",
